--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "src": "file:"
   },
   "devDependencies": {
+    "@types/node": "22.10.1",
+    "@types/react": "18.3.12",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.7.2"
   }
 }
