--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.463.0",
     "next": "15.0.3",
     "node": "^22.11.0",
+    "radix": "^0.0.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "src": "file:",
